# cloco-nepal-internship-2025

./: README.md
2025-02-18/bookstore_task/: pyproject.toml
2025-02-18/bookstore_task/core/: .env  .gitignore
2025-02-18/bookstore_task/core/book/: admin.py  models.py  views.py
2025-02-18/bookstore_task/core/book/migrations/: 0001_initial.py  (+7 more)
2025-02-18/bookstore_task/core/core/: settings.py  urls.py
2025-02-18/bookstore_task/core/order/: admin.py  models.py
2025-02-18/bookstore_task/core/user/: admin.py  models.py
2025-02-25/book_store_template_task/: pyproject.toml
2025-02-25/book_store_template_task/core/: .env.example  .gitignore
2025-02-25/book_store_template_task/core/books/: admin.py  forms.py  models.py  urls.py  views.py
2025-02-25/book_store_template_task/core/core/: settings.py  urls.py
2025-02-25/book_store_template_task/core/templates/: base.html  book_form.html  home.html  index.html  success.html
2025-02-25/book_store_template_task/core/users/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
2025-02-27/bookstore_drf/: pyproject.toml
2025-02-27/bookstore_drf/core/: .gitignore
2025-02-27/bookstore_drf/core/books/: admin.py  models.py  serializers.py  urls.py  views.py
2025-02-27/bookstore_drf/core/booksv2/: apps.py  urls.py  views.py
2025-02-27/bookstore_drf/core/core/: settings.py  urls.py
2025-02-27/bookstore_drf/core/orders/: admin.py  models.py  serializers.py  urls.py  views.py
2025-02-27/bookstore_drf/core/users/: admin.py  managers.py  models.py  serializers.py  urls.py  views.py
2025-02-27/bookstore_drf/core/usersv2/: apps.py  helpers.py  urls.py  views.py
(+242 files in other folders)
