[tool.poetry]
name = "bookstore-task"
version = "0.1.0"
description = ""
authors = ["Rajan66 <rajanmaharjan042@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.6"
psycopg = "^3.2.4"
django-environ = "^0.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
